--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -16,7 +16,7 @@ html {
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column; 
   min-height: 100vh;
 }
